--- a/JenkinsFile
+++ b/JenkinsFile
@@ -42,11 +42,32 @@ pipeline {
                 sh "docker rmi $registry:$BUILD_NUMBER" 
             }
         }
-        stage('Deploy in kubernetes') {
+        stage('Deploy to Kubernetes Dev Environment') {
             steps {
-                echo 'Deploy the App in k8s'
+                echo 'Deploy the App using Kubectl'
+                //sh "sed -i 's/BUILDNUMBER/$BUILD_NUMBER/g' python-flask-deployment.yml"
+                sh "sed -i 's/DEPLOYMENTENVIRONMENT/development/g' deployment.yml"
                 sh "sed -i 's/TAG/$BUILD_NUMBER/g' deployment.yml"
-                sh 'kubectl apply -f deployment.yml'
+                sh "kubectl apply -f deployment.yml"
+            }
+        }
+        stage('Promote to Production') {
+            steps {
+                echo "Promote to production"
+            }
+            input {
+                message "Do you want to Promote the Build to Production"
+                ok "Ok"
+                submitter "gowreeshggopal@gmail.com"
+                submitterParameter "whoIsSubmitter"
+                
+            }
+        }
+        stage('Deploy to Kubernetes Production Environment') {
+            steps {
+                echo 'Deploy the App using Kubectl'
+                sh "sed -i 's/development/production/g' deployment.yml"
+                sh "kubectl apply -f deployment.yml"
             }
         }
     }
