--- a/JenkinsFile
+++ b/JenkinsFile
@@ -21,6 +21,12 @@ pipeline {
                 sh 'docker run --user  $(id -u):$(id -g) -v $(pwd):/src --rm secfigo/bandit bandit -r /src -f json -o /src/bandit-output.json || echo bandit failed'
             }
         }
+        stage('Secret Scanning') {
+            steps{
+                echo 'Scan the git repo using Trufflehog'
+                sh 'docker run --user $(id -u):$(id -g) --rm -v "$(pwd):/proj" dxa4481/trufflehog file:///proj --json | tee trufflehog-output.json'
+            }
+        }
         stage('Building the image') { 
             steps { 
                 script { 
